plugins {
    id 'java-library'
    id "com.github.johnrengelman.shadow" version "7.1.2"
}

dependencies {

    api files('libs/org.eclipse.jdt.core-3.28.0.jar')
    api 'org.eclipse.platform:org.eclipse.core.resources:3.16.100'
    api 'org.eclipse.platform:org.eclipse.core.runtime:3.24.100'
    api 'org.eclipse.platform:org.eclipse.core.filesystem:1.9.300'
    api 'org.eclipse.platform:org.eclipse.text:3.12.0'

    testImplementation 'junit:junit:4.13.2'
}

java {
    sourceCompatibility = JavaVersion.VERSION_17 
    targetCompatibility = JavaVersion.VERSION_17 
} 
tasks.withType(JavaCompile).configureEach {
    options.compilerArgs += [
        "--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED",
        "--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED",
        "--add-exports=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED",
        "--add-exports=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED",
        "--add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED",
        "--add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED",
        "--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED",
        "--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED",
        "--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED",
        "--add-exports=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED",
        "--add-exports=jdk.compiler/sun.nio.ch=ALL-UNNAMED"
    ]
}
